[package]
name = "generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
directories = "4.0.1"
git2 = "0.13.22"
once_cell = "1.8.0"
regex = "1.5.4"
serde_yaml = "0.8.21"
tera = "1.12.1"
thiserror = "1.0.29"
walkdir = "2.3.2"
